[tool.poetry]
name = "luko"
version = "0.1.0"
description = ""
authors = ["hiljor,mikoedit"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
numpy = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
